--- a/Bank-services/BankApplication/build.xml
+++ b/Bank-services/BankApplication/build.xml
@@ -1,90 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="Bank" default="build" basedir=".">
-    
+<project name="Property" default="build" basedir=".">
     <!-- Propriétés -->
-    <property name="src.dir" location="src"/>
-    <property name="build.dir" location="bin"/>
-    <property name="jar.dir" location="dist"/>
-    <!-- Name of the jar file -->
-    <property name="jar.file" value="Bank.jar" />
-
-    <property name="jar.deployed" value="Bank" />
-
-    <property name="lib.dir" value="lib" />
-
-
+    <property name="src.dir" value="src"/>
+    <property name="web.dir" value="WebContent"/>
+    <property name="build.dir" value="bin"/>
+    <property name="lib.dir" value="lib"/>
+    <property name="glassfish.dir" value="/opt/glassfish7/glassfish/modules"/>
+    <property name="war.dist" value="dist"/>
+    <property name="war.name" value="Bank"/>
 
     <!-- ASADMIN -->
-
     <property name="glassfish.asadmin" location="/opt/glassfish7/bin/asadmin" />
 
-
-    <!-- Définir le chemin de classe -->
-    <path id="classpath">
-        <!-- Ajoutez ici le chemin vers les bibliothèques Java EE -->
-        <fileset dir="/home/dylan/Desktop/Java/jar">
-            <include name="jakarta.jakartaee-api-10.0.0.jar" />
-            <include name="postgresql-42.3.7.jar" />
-        </fileset>
-        
-    </path>
-
-    <!-- Tâche de nettoyage -->
+    <!-- Tâche de suppression du répertoire "bin" -->
     <target name="clean">
-        <delete dir="${build.dir}"/>
-        <delete dir="${jar.dir}"/>
+        <delete dir="${build.dir}" failonerror="false" />
     </target>
-    
+
     <!-- Tâche de compilation -->
-    <target name="compile" depends="clean">
-        <mkdir dir="${build.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="classpath"/>
-    </target>
-    
-    <!-- Tâche de création du JAR -->
-    <target name="jar" depends="compile">
-        <mkdir dir="${jar.dir}"/>
-        <jar destfile="${jar.dir}/${jar.file}" basedir="${build.dir}">
-            <!-- Inclure les fichiers de classe -->
-            <include name="**/*.class"/>
-            
-            <!-- Inclure le dossier "lib" complet -->
-            <zipgroupfileset dir="${lib.dir}" includes="**/*.jar" />
-        </jar>
-        
-        <echo message="Builded!"/>
+    <target name="compile" depends="clean , init">
+        <javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
+            <classpath>
+                <fileset dir="${lib.dir}">
+                    <include name="*.jar"/>
+                </fileset>
+                <fileset dir="${glassfish.dir}">
+                    <include name="**/*.jar"/>
+                </fileset>
+            </classpath>
+        </javac>
     </target>
 
+    <!-- Tâche de création du WAR -->
+    <target name="war" depends="compile">
+        <war destfile="${war.dist}/${war.name}.war" needxmlfile="false">
+            <fileset dir="${web.dir}" />
+            <lib dir="${lib.dir}" />
+            <classes dir="${build.dir}" />
+        </war>
+    </target>
 
-        <!-- Tâche pour undeploy le fichier JAR -->
-        <target name="undeploy" depends="jar">
-
-            <exec executable="${glassfish.asadmin}">
-
-                <arg value="undeploy"/>
-
-                <arg value="${jar.deployed}"/>
-
-            </exec>
-
-            <echo message="Undeployed"/>
-
-        </target>
-
+    <!-- Tâche pour undeploy le fichier JAR -->
+    <target name="undeploy" depends="war">
+        <exec executable="${glassfish.asadmin}">
+            <arg value="undeploy"/>
+            <arg value="${war.name}"/>
+        </exec>
+        <echo message="Undeployed"/>
+    </target>
 
     <!-- Tâche pour déployer le fichier JAR -->
-    <target name="deploy" depends="undeploy">
-
+    <target name="build" depends="undeploy">
         <exec executable="${glassfish.asadmin}">
             <arg value="deploy"/>
-            <arg value="${jar.dir}/${jar.file}"/>
+            <arg value="${war.dist}/${war.name}.war"/>
         </exec>
         <echo message="Deployed !"/>
     </target>
 
-    
-    <!-- Tâche par défaut -->
-    <target name="build" depends="deploy">
-        <echo message="Builded and deployed !"/>
+    <!-- Tâche d'initialisation -->
+    <target name="init">
+        <mkdir dir="${build.dir}"/>
+        <mkdir dir="${war.dist}"/>
     </target>
 </project>
